Fixed some TS config bugs
tsconfig.json: Added project directory path and changed target api's.

.eslintrc: Added import support for ES2020.

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "import"],
   "rules": {
     "prettier/prettier": ["error"]
   }
