--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "es2020",
     "module": "commonjs",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "moduleResolution": "node",
-    "skipLibCheck": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "lib": ["es2020"],
     "paths": {
-      "@project/*": ["src/*"]
+      "@project/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src/**/**.ts",
