--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "prettier": "^2.8.4",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "inversify": "^6.0.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
