--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,17 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "commonjs",
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "incremental": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
     "outDir": "dist",
     "baseUrl": ".",
+    "types": ["reflect-metadata"],
     "lib": ["es2020"],
     "paths": {
       "@project/*": [
