Add: transportation and application paths to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "paths": {
       "@project/*": [
         "src/*"
+      ],
+      "@transportation/*": [
+        "src/transportation/*"
+      ],
+      "@application/*": [
+        "src/application/*"
       ]
     }
   },
