--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Enes Bayraktar",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "dev:watch": "tsx watch src/index.ts",
+    "dev": "tsx src/main.ts",
+    "dev:watch": "tsx watch src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,12 +24,5 @@
     "prettier": "^2.8.4",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.17",
-    "express": "^4.18.2",
-    "inversify": "^6.0.1",
-    "inversify-express-utils": "^6.4.3",
-    "reflect-metadata": "^0.1.13"
   }
 }
