--- a/package.json
+++ b/package.json
@@ -22,14 +22,22 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
+    "prisma": "^4.11.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@apollo/server": "^4.4.1",
+    "@prisma/client": "^4.11.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
+    "nexus": "^1.3.0",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.13"
   }
 }
