--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "prettier/prettier": "error",
     "import/prefer-default-export": 0,
     "class-methods-use-this": 0,
-    "@typescript-eslint/no-empty-interface": 0
+    "@typescript-eslint/no-empty-interface": 0,
+    "no-underscore-dangle": 0
   }
 }
