--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "author": "Enes Bayraktar",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "dev:watch": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts",
+    "watch": "tsx watch src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "devDependencies": {
     "@types/node": "^18.14.6",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
@@ -33,11 +34,13 @@
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "graphql": "^16.6.0",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "nexus": "^1.3.0",
     "path": "^0.12.7",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "uuid": "^9.0.0"
   }
 }
